# tunaFlow

./: .gitignore  ACKNOWLEDGMENTS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  INSTALL.md  LICENSE  NOTICE  README.en.md  README.ko.md  README.md  SECURITY.md  index.html  install.sh  package-lock.json  package.json  resume_claude.md  resume_claude_2.md  resume_codex.md  vite.config.ts
.claude/: settings.local.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: build.yml  ci.yml  eval-regression.yml
.tunaflow/outbox/: 1775854254733.md  1775854713667.md
agents/: README.md
docs/: api-inquiry-gamma-delta.md  index.md
docs/agents/: architect.md  developer.md  meta.md
docs/api/: v1.md
docs/beta/: announcement.md  known-issues.md  release-notes.md
docs/eval/: README.md  golden-set.json
docs/how-to/: doc-indexing.md  rawq-setup.md  rt-test-scenarios.md  validation-scenario-session12.md
docs/ideas/: abtopAnalysisForTunaFlow.md  agentTemplateVersioningIdea.md  artifactAndFailureLearningIdea.md  bgeM3QuantizationAndAcceleratorIdea.md  blog-contextpack-draft.md  chatReadabilityImprovementIdea.md  ciMultiOsPlan.md  claudeCodePatternsForTunaFlow.md  clawTeamAnalysis.md  contextPackTieringIdea.md  entrolyAdoptionIdea_2026-05-02.md  guardrailImprovementIdeas.md  index.md  insightTabDesign.md  insightWorkflowIdea.md  knowledgeLayerArchitectureIdea.md  litertLmIntegrationIdea.md  mexContextScaffoldIdea.md  mobileConnectivityAndFormIdea.md  onboardingMetaAgentIdea.md  ptyFullIntegrationPlan.md  ptyInteractiveIdea.md  ptySessionPolicy.md  rawqGraphEvolutionStrategyIdea.md  rtAlgorithmEnhancementIdeas.md  sdkAsInterfaceLayerIdea.md  sdkIntegrationIdea.md  seCallVectorStorageIdea.md  searchEnhancementFromSecallIdea.md  smallModelStressTesterIdea.md  terminalInChatIdea.md  threadlensSessionManagementIdea_2026-04-30.md  traceEnhancementAbtopIdea.md  vectorDbAndRetrievalAlgorithmsIdea.md  workflowGraphEnhancementIdea.md
docs/plans/: agentProfileUsagePolishPlan_2026-03-29.md  agentSkillPersonaIaPlan_2026-03-29.md  artifactsTabUsabilityPlan_2026-03-30.md  betaReleaseReadinessPlan.md  betaRtUpgradeSprintPlan_2026-04-15.md  chatPanelMinHeightCascadePlan_2026-04-25.md  cicdReleasePlan.md  claudeDangerouslySkipPermissionsPlan_2026-04-24.md  claudeRateLimitVisibilityPlan_2026-04-29.md  claudeResumeSessionTransitionPlan_2026-04-29.md  claudeTransportFlipHardeningPlan_2026-04-29.md  codexGeminiOnboardingAnalysisFailureInvestigationPlan_2026-04-25.md  compressedMemoryOperationalPolishPlan_2026-03-30.md  contextBudgetControlUiPlan_2026-03-30.md  contextHubExplicitHandoffPlan_2026-03-30.md  contextHubSearchGetUiPlan_2026-03-30.md  dependencyAdoptionPlan.md  designReviewGatePlan-task-01.md  designReviewGatePlan-task-02.md  designReviewGatePlan-task-03.md  designReviewGatePlan-task-04.md  designReviewGatePlan.md  docsPanelScopePolicyPlan_2026-04-29.md  engineFeatureParityClassificationPlan.md  engineServerModePlan.md  evaluationRunCreationUiPlan_2026-03-30.md  futureWorkBacklog.md  i18nPlan.md  index.md  (+74 more)
evals/: README.md
scripts/: build-rawq.ps1  build-rawq.sh  build.sh  reindex-docs.mjs
src/: index.css  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: errors.rs  guardrail.rs  lib.rs  notification.rs  notification_stub.rs
src-tauri/src/agents/: anthropic_sdk.rs  claude.rs  claude_sdk_session.rs  claude_window_guard.rs  codex.rs  codex_app_server.rs  context_hub.rs  crg.rs  embedder.rs  gemini.rs  gemini_sdk.rs  identity_analyzer.rs  mod.rs  openai_compat.rs  openai_sdk.rs  opencode.rs  rawq.rs  resolve.rs  tool_handler.rs
src-tauri/src/bootstrap/: crash.rs  db.rs  env.rs  menu.rs  mod.rs  services.rs  window.rs
src-tauri/src/commands/: agent_detect.rs  agents.rs  artifacts.rs  attachments.rs  branches.rs  context_hub.rs  context_queries.rs  conventions_sync.rs  conversation_memory.rs  conversations.rs  crash_reports.rs  dependency_install.rs  diagnostics.rs  document_index.rs  files.rs  insight.rs  insight_extract.rs  jobs.rs  memory_compression.rs  memory_topics.rs  messages.rs  meta_notifications.rs  mod.rs  model_discovery.rs  plans.rs  project_onboarding.rs  project_tools.rs  projects.rs  pty.rs  roundtable.rs  secrets.rs  session_discovery.rs  skills.rs  test_runner.rs  tracing.rs  vector_search.rs  worldview.rs
src-tauri/src/commands/agents_helpers/: compression.rs  context_pack.rs  identity.rs  mod.rs  send_common.rs  tool_request.rs  trace_log.rs
src-tauri/src/commands/agents_helpers/context_pack/: db_queries.rs  mod.rs  section_builders.rs
src-tauri/src/commands/agents_helpers/send_common/: agent_session_tx.rs  context_loading.rs  mod.rs  persistence.rs  prompt_assembly.rs  session_freshness.rs
src-tauri/src/commands/meta_agent/: background_jobs.rs  background_worker.rs  identity_trigger.rs  mod.rs
src-tauri/src/commands/pty/: session.rs
src-tauri/src/commands/roundtable_helpers/: deliberative.rs  executor.rs  persist.rs  prompt.rs  sequential.rs  types.rs
src-tauri/src/commands/search/: hybrid.rs  mod.rs  query_expand.rs  tokenizer.rs  unified.rs
src-tauri/src/commands/vector_search/: index.rs  mod.rs  query.rs
src-tauri/src/db/: migrations.rs  mod.rs  models.rs  schema.rs
src-tauri/src/http_api/: agents.rs  auth.rs  conversations.rs  events.rs  insight.rs  meta.rs  mod.rs  plans.rs  state.rs  ws.rs
src-tauri/tests/: db_integration.rs
(+550 files in other folders)
