[package]
name = "tuna-flow"
version = "0.1.0"
edition = "2021"

[lib]
name = "tuna_flow_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-notification = "2"
tauri-plugin-store = "2"
tauri-plugin-window-state = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rusqlite = { version = "0.31", features = ["bundled"] }
sqlite-vec = "0.1"
zerocopy = { version = "0.7", features = ["derive"] }
uuid = { version = "1", features = ["v4"] }
tempfile = "3"
thiserror = "1"
lazy_static = "1"
dirs = "5"
tauri-plugin-fs = "2.4.5"
tauri-plugin-clipboard-manager = "2.3.2"
tauri-plugin-shell = "2.3.5"
tauri-plugin-opener = "2.5.3"
chrono = { version = "0.4.44", features = ["serde"] }
regex = "1"
sha2 = "0.10"
toml = "0.8"
reqwest = { version = "0.12", features = ["json", "stream", "blocking"] }
futures-util = "0.3"
tokio-tungstenite = "0.24"
tokio = { version = "1.50.0", features = ["rt-multi-thread", "sync", "time", "process", "macros"] }
parking_lot = "0.12"
axum = { version = "0.8", features = ["ws"] }
tower-http = { version = "0.6", features = ["cors"] }
portable-pty = "0.8"
strip-ansi-escapes = "0.2.1"
alacritty_terminal = "0.26.0"
ort = "=2.0.0-rc.10"
tokenizers = { version = "0.21", default-features = false, features = ["fancy-regex"] }
ndarray = "0.16"
# OS keychain access (macOS Keychain, Windows Credential Vault, Linux Secret Service).
# Used for persisting user-supplied secrets (future API keys etc.) outside the SQLite DB.
keyring = "3"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
